# oresat-zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  canable.sh  format_code.sh  requirements.txt  setup.sh  west.yml
apps/adcs/: CMakeLists.txt  README.md  app.overlay  prj.conf
apps/adcs/src/: imu.c  imu.h  main.c
apps/app_protocard/: CMakeLists.txt  app.yaml  main.c
apps/battery/: CMakeLists.txt  README.md  sample.yaml
apps/diode_test/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  sample.yaml
apps/diode_test/src/: main.c
apps/reaction_wheel/: CMakeLists.txt  README.md  sample.yaml
apps/solar/: CMakeLists.txt  README.md  sample.yaml
apps/solar/src/: main.c
boards/oresat_protocard/: oresat_protocard.yaml  oresat_protocard_defconfig
boot/: CMakeLists.txt  Makefile  README.md  app.conf  boot.conf  prj.conf
boot/boards/: README.rst  app-stm32f091rc.overlay  boot-stm32f091rc.overlay
common/: CMakeLists.txt  board_sensors.c  oresat.c  oresat.h  worker.c
common/canopennode_v4/: CO_driver.c  CO_driver_custom.h  CO_driver_target.h  canopennode.c
common/include/: oresat.h  worker.h
modules/: CMakeLists.txt
modules/canopennode_v4/: CO_driver.c  CO_driver_custom.h  canopennode.h
oresat-firmware/apps/app_protocard/: CMakeLists.txt
oresat-firmware/apps/app_protocard/src/: blinky.c  main.c  protocard.c
oresat-firmware/apps/app_protocard/src/include/: blinky.h
oresat-firmware/boards/oresat_protocard/: Kconfig.defconfig  Kconfig.oresat_protocard  board.yml  oresat_protocard.dts
src/f0/app_protocard/: CMakeLists.txt  Makefile  main.c
src/f0/app_protocard/src/: blinky.c
src/f0/app_protocard/src/include/: blinky.h  protocard.h
src/f0/blinky/: Makefile
